--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
     "sequelize": "^6.32.1"
   }
