--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
     "mysql2": "^3.5.2",
+    "redis": "^4.6.7",
     "sequelize": "^6.32.1"
   }
 }
