--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "casual": "^1.6.2",
     "jest": "^29.6.1",
     "nodemon": "^3.0.1"
   },
