--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "mysql2": "^3.5.2",
     "redis": "^4.6.7",
     "sequelize": "^6.32.1",
+    "serve-favicon": "^2.5.0",
     "socket.io": "^4.7.2"
   }
 }
